welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:4: error: value - is not a member of Nothing
possible cause: maybe a semicolon is missing before `value -'?
  else { return false;}}}- 
                         ^